<resources>
    <string name="advice">Conselho</string>
    <string name="task">Tarefa</string>
    <string name="tasks">Tarefas</string>
    <string name="targetOverlapError">Já existe um objectivo definido para o tempo escolhido</string>
    <string name="navTask">As minhas tarefas</string>
    <string name="navLog">O meu Logbook</string>
    <string name="navDiabetesTools">Definições Gestão Diabetes</string>
    <string name="app_name">myDiabetes</string>
    <string name="action_settings">Definições</string>
    <string name="noButton">Não</string>
    <string name="failed_import_img">Não foi possivel aceder à imagem.</string>
    <string name="upload_successful">Envio feito com sucesso.</string>
    <string name="error_meal_act">"Valor de H.Carb introduzido para a refeição é menor do que o total de H.Carb dos itens!"</string>
    <string name="use_auto_upd">Envio automático de informação</string>
    <string name="title_activity_app_options">Opções da aplicação</string>
    <string name="upload_failed">Infelizmente falhou o envio, tente mais tarde.</string>
    <string name="title_activity_my_data">Os Meus Dados</string>
    <string name="title_activity_exercise">Registos de Exercício</string>
    <string name="title_activity_insulin">Registos de Insulina</string>
    <string name="title_activity_logbook">LogBook</string>
    <string name="title_activity_blood_pressure">Registos de P.A.</string>
    <string name="title_activity_carbo_hydrate">Registos de H. Carbono</string>
    <string name="title_activity_cholesterol">Registos de Colesterol</string>
    <string name="title_activity_disease">Registos de Doenças</string>
    <string name="title_activity_h1_a1c">Registos de HbA1c</string>
    <string name="title_activity_weight">Registos de Peso</string>
    <string name="title_activity_transfer">Transferência PC</string>
    <string name="title_activity_scan">Digitalizar</string>
    <string name="title_activity_exercise_detail">Registo de Exercício</string>
    <string name="title_activity_carbo_hydrate_detail">Registo de H. Carbono</string>
    <string name="title_activity_blood_pressure_detail">Registo de P.A.</string>
    <string name="title_activity_cholesterol_detail">Registo de Colesterol</string>
    <string name="title_activity_weight_detail">Registo de Peso</string>
    <string name="title_activity_hb_a1c_detail">Registo de HbA1c</string>
    <string name="title_activity_disease_detail">Registo de Doença</string>
    <string name="title_activity_import_export">Importar &amp; Exportar</string>
    <string name="title_activity_tag_detail">Fase do Dia</string>
    <string name="title_activity_target_bg_detail">Objetivo de Glicemia</string>
    <string name="title_activity_insulins_detail">Insulina</string>
    <string name="title_activity_info">Informação</string>
    <string name="title_activity_view_photo">Fotografia</string>
    <string name="title_activity_welcome">Registo</string>
    <string name="add_MedicinesFragment">Adicionar Medicamento</string>
    <string name="add_Carbs">Adicionar Hidratos de Carbono</string>
    <string name="add_more_registers">Adicionar mais registos</string>
    <string name="add_photo">Adicionar Foto</string>
    <string name="transf_WaitMesg">Esperar ligação</string>
    <string name="transf_WaitTitle">Atenção</string>
    <string name="transf_ConnOK">Ligação Estabelecida</string>
    <string name="transf_InfoTitle">Informação</string>
    <string name="delete_detail">Eliminar</string>
    <string name="deleteReading">Eliminar leitura?</string>
    <string name="deleteException">Não pode eliminar esta leitura!</string>
    <string name="delete_insulin">Eliminar Insulina?</string>
    <string name="delete_insulin_exception">Não pode eliminar esta insulina, pois está associado a outros registos!</string>
    <string name="delete_photo">Eliminar foto?</string>
    <string name="delete_MedicinesFragment">Eliminar medicamento?</string>
    <string name="delete">Eliminar</string>
    <string name="targetbg_delete_exception">Não pode eliminar este objetivo, associado a outros registos!</string>
    <string name="tag_info_delete_exception">Não pode eliminar esta leitura, associada a outros registos!</string>
    <string name="error_MedicinesFragment">Não pode eliminar este medicamento, referenciado em registos!</string>
    <string name="error_glicInput">Número Invalido</string>
    <string name="error_login_auth">Erro na autenticação, verifique o nome de utilizador e password e tente novamente.</string>
    <string name="error_login_no_internet">Sem ligação à Internet</string>
    <string name="error_repeated_description">Descrição repetida</string>
    <string name="error_could_not_send_data">Não foi possivel enviar a sua base de dados.</string>
    <string name="error_time_overlaps">Tempo coincide com outro intervalo</string>
    <string name="error_email">Email do utilizador, não encotrado!</string>
    <string name="permissions">A aplicação necessita de permissões de %1$s.</string>
    <string name="all_permissions">A aplicação requer permissões para continuar.</string>
    <string name="error_start_time_overlaps">Tempo inicial coincide com outro intervalo</string>
    <string name="error_end_time_overlaps">Tempo final coincide com outro intervalo</string>
    <string name="storage">Memória</string>
    <string name="error_end_time_before_start_time">Tempo de fim antes do tempo de inicio</string>
    <string name="error_dbcopy">Ocorreu um erro durante a cópia de segurança, verifique se a memória externa está disponivel!</string>
    <string name="error_transfer">Ocorreu um erro</string>
    <string name="error_note">Por favor insira um outro registo</string>
    <string name="error_carbs">O valor inserido não é válido</string>
    <string name="error_insulin">O valor inserido não é válido</string>
    <string name="error_glucose">O valor inserido não é válido</string>
    <string name="error_invalid_height">Altura errada, tem de ser em metros. (Falta um ponto algures?)</string>
    <string name="error_invalid_parameter">Valor fora dos padrões normais</string>
    <string name="error_field_required">Campo necessário</string>
    <string name="error_repeated_name">O Nome não pode ser repetido</string>
    <string-array name="Sex">
        <item>@string/gender_female</item>
        <item>@string/gender_male</item>
    </string-array>
    <string-array name="diabetes_Type">
        <item>@string/diabetes_type_1</item>
        <item>@string/diabetes_type_2</item>
        <item>@string/diabetes_type_gestational</item>
    </string-array>
    <string name="diabetes_type_1">Tipo 1</string>
    <string name="diabetes_type_2">Tipo 2</string>
    <string name="diabetes_type_gestational">Gestacional</string>
    <string name="save_GlycemiaDetail">Guardar</string>
    <string name="saveButton">Gravar</string>
    <string name="photoSaved">Guardada em: </string>
    <string name="mydata_saved">Guardado</string>
    <string name="positiveButton">Sim</string>
    <string name="negativeButton">Cancelar</string>
    <string name="okButton" translatable="false">OK</string>
    <string-array name="Effort">
        <item>Muito Leve</item>
        <item>Leve</item>
        <item>Moderado</item>
        <item>Intenso</item>
        <item>Muito Intenso</item>
    </string-array>
    <string-array name="daytimes">
        <item>Acordar</item>
        <item>Antes Peq. almoço</item>
        <item>Depois Peq. almoço</item>
        <item>Antes almoço</item>
        <item>Depois Almoço</item>
        <item>Lanche</item>
        <item>Antes jantar</item>
        <item>Depois jantar</item>
        <item>Deitar</item>
        <item>Noite</item>
        
    </string-array>
    <string name="Meal">Refeição</string>
    <string name="Glycemia">Glicemia</string>
    <string name="Insulin">Insulina</string>
    <string name="Carbs">H.Carb</string>
    <string name="Exercise">Exercício</string>
    <string name="information_about_using">Esta aplicação está em desenvolvimento e para a usar deve ter assinado o Consentimento Informado e ter sido informado sobre a metodologia do estudo.</string>
    <string name="information_about_developers">Aplicação desenvolvida por Ana Azevedo, André Diegues, Artur Ferreira, Diogo Machado, Eduardo Soares, João Graça, João Maia, José Ornelas, Pedro Cunha, Ricardo Parra.</string>
    <string name="information_about_libraries">Esta aplicação utiliza as bibliotecas AAkira/ExpandableLayout, e Pierry///SimpleToast.</string>
    <string name="information_about_food_db_info">A informação contida na base de dados dos alimentos inserida neste sistema foi extraida da Plataforma Portuguesa de Informação Alimentar (PortFIR)</string>
    <string name="information_about_version">Versão </string>
    <string name="information_about_contact" translatable="false">mydiabetes@dcc.fc.up.pt\n\n https://mydiabetes.dcc.fc.up.pt/</string>
    <string name="preferences_target">Objetivos Glicemia</string>
    <string name="preferences_insulins">Insulinas</string>
    <string name="preferences_factors">Fatores e Rácios</string>
    <string name="transfer_fail_connection">Ligação Falhou!</string>
    <string name="transfer_check_wifi">Verifique se tem o wi-fi ligado</string>
    <string name="transfer_correct_network">ou se está na rede correta.</string>
    <string name="transfer_transfer">A transferir. . .</string>
    <string name="transfer_success">Transferência concluída com sucesso</string>
    <string name="transfer_try_again">tente novamente</string>
    <string name="transfer_db">Transferir Base de Dados</string>
    <string name="transfer">Transferir</string>
    <string name="sync_with_pc">Sincronizar com PC</string>
    <string name="sync">Sincronização</string>
    <string name="name">Nome</string>
    <string name="from">De</string>
    <string name="to">Até</string>
    <string name="disease">Doença</string>
    <string name="flu">Gripe</string>
    <string name="name_hint">Jorge Mendes</string>
    <string name="select_all">Selecionar Tudo</string>
    <string name="diabetes_type">Tipo de diabetes</string>
    <string name="sensivity_factor">Fator de sensibilidade</string>
    <string name="hint_value3">ex.: 45.0</string>
    <string name="carbs_racio">Rácio Hidratos de Carbono</string>
    <string name="hint_value4">ex.: 10.0</string>
    <string name="hypoglycemia_limit">Limite para hipoglicemia</string>
    <string name="hint_value5">ex.: 70</string>
    <string name="hyperglycemia_limit">Limite para hiperglicemia</string>
    <string name="hint_value6">ex.: 150</string>
    <string name="birth_date">Data de Nascimento</string>
    <string name="hint_birth_date" translatable="false">1980-04-22</string>
    <string name="gender">Sexo</string>
    <string name="height">Altura</string>
    <string name="height_hint" translatable="false">1.65</string>
    <string name="gender_male">Masculino</string>
    <string name="gender_female">Feminino</string>
    <string name="new_feature">Nova funcionalidade</string>
    <string name="active_insulin">Insulina Activa</string>
    <string name="new_feature_iob_text_1">Quando toma uma insulina esta não actua de imediato, mas sim ao longo de algumas horas. Como pode ver na imagem acima.</string>
    <string name="new_feature_iob_text_2">Agora pode ter informação da insulina que ainda está activa no seu organismo quando for tomar uma nova insulina</string>
    <string name="feature_cloud_sync">Sincronizar com cloud</string>
    <string name="feature_cloud_sync_description1">Pode enviar para a cloud os seus dados de forma segura.</string>
    <string name="feature_cloud_sync_description2">A qualquer momento pode aceder aos dados em https://mydiabetes.dcc.fc.up.pt/</string>
    <string name="login_username">Nome do utilizador</string>
    <string name="login_password">Palavra-passe</string>
    <string name="login_extra_text">Criar nova conta.</string>
</resources>