<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".ui.fragments.register.PersonalDataFragment"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:weightSum="1">


        <TextView
            android:text="Informações Pessoais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="26sp"
            android:paddingBottom="30dp"
            android:paddingTop="15dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold|italic"
            android:textColor="@android:color/white" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/add_photo"/>

        <TextView
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name"
            android:theme="@style/welcomeEditText"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_grey"/>


        <TextView
            android:text="@string/gender"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                android:textColor="@android:color/white"
                android:theme="@style/welcomeRadioButton"/>


            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/gender_male"
                android:textColor="@android:color/white"
                android:theme="@style/welcomeRadioButton"/>
        </RadioGroup>

        <TextView
            android:text="@string/height"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/height"
            android:theme="@style/welcomeEditText"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_grey"/>


        <TextView
            android:text="@string/birth_date"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/birthdate"
            android:inputType="date"
            android:theme="@style/welcomeEditText"
            android:focusable="false"
            tools:hint="@string/hint_birth_date"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hint_grey" />
    </LinearLayout>

</ScrollView>
