<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            tools:context=".ui.activities.SettingsInsulin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tv_MyData_DiabetesType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/diabetes_type"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sp_MyData_DiabetesType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tv_MyData_InsulinRatio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sensivity_factor"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_MyData_InsulinRatio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_value3"
                android:inputType="numberDecimal"
                android:textSize="18sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tv_MyData_CarbsRatio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/carbs_racio"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_MyData_CarbsRatio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_value4"
                android:inputType="numberDecimal"
                android:textSize="18sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tv_MyData_LowerRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hypoglycemia_limit"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_MyData_LowerRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_value5"
                android:inputType="numberDecimal"
                android:textSize="18sp">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tv_MyData_HigherRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hyperglycemia_limit"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_MyData_HigherRange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_value6"
                android:inputType="numberDecimal"
                android:textSize="18sp">
            </EditText>
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:onClick="showIOBDialog"
            android:paddingTop="4dp">

            <TextView
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center_vertical"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="Usar Insulina Activa"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/use_IOB"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>